# huggingface-computer-vision-course

./: .gitignore  README.md  pyproject.toml  unit02.md  unit03.md  unit04.md  unit07.md  unit09.md  unit10.md  unit11.md  unit13.md
chapters-en/unit11/: 1.mdx
chapters-vi/: unit01.md  unit02.md  unit03.md  unit04.md  unit05.md  unit06.md  unit07.md  unit08.md  unit09.md  unit10.md  unit11.md  unit12.md  unit13.md
codes/unit02/: README.md  basic_cnn.py  convnext.py  convolution_and_pooling.py  googlenet.py  mobilenet.py  resnet.py  transfer_learning.py  vgg.py  yolo.py
codes/unit03/: README.md  classification_and_transfer_learning.py  cvt.py  detection_training.py  detr.py  dinat.py  knowledge_distillation.py  maskformer.py  mobilevit_v2.py  oneformer.py  swin_transformer.py  vit.py
codes/unit04/: README.md  blip.py  clip.py  contrastive_learning.py  document_vqa.py  image_captioning.py  image_text_retrieval.py  multimodal_fusion.py  owl_vit.py  text_to_image.py  transfer_learning.py  vqa.py
codes/unit05/: README.md  controlnet.py  cyclegan.py  diffusion.py  gan.py  (+6 more)
slides/: unit01-computer-vision.html  unit02-cnn.html  unit03-vision-transformers.html  unit03.html  unit04-multimodal.html  unit05-generative-models.html  unit06-computer-vision-tasks.html  unit07-video-processing-slides.html  unit08-3d-computer-vision-slides.html  unit09-model-optimization-deployment.html  unit10-synthetic-data-slides.html  unit11-zero-shot-learning-slides.html  unit12-ethics-bias-slides.html  unit13-architecture-alternatives.html
web/: index.html  package-lock.json  package.json
(+79 files in other folders)
