[project]
name = "violence-detection"
version = "0.1.0"
description = "Binary fight/non-fight video classifier training pipeline"
readme = "README.md"
license = {text = "Proprietary — Internal Use Only"}
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy==1.23",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torchmetrics>=1.7.1",
    "albumentations>=1.3.1",
    "scikit-image>=0.24.0",
    "easydict>=1.13",
    "setuptools>=61",
]

[project.optional-dependencies]
cpu = [
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
environments = [
    "sys_platform == 'linux'",
]
no-build-isolation = true
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
]

torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.3.0",
    "pytest",
    "streamlit>=1.58.0",
    "transformers>=5.10.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
